deploy/envoy/httproute-nginx.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-whoami
  namespace: nginx-demo
spec:
  parentRefs:
    - name: apsis-gateway
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-whoami
          port: 80
